<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medical_supplies">Medical Supplies</string>
    <string name="groceries_food">Groceries/Food</string>
    <string name="housing">Housing</string>
    <string name="business">Business</string>
    <string name="childcare">Childcare</string>
    <string name="education">Education</string>
    <string name="legal">Legal</string>
    <string name="wellbeing_mental">Wellbeing/Mental</string>
    <string name="entertainment">Entertainment</string>
    <string name="information">Information</string>
    <string name="funding">Funding</string>
    <string name="r_amp_d">R&amp;D</string>
    <string name="remote_work">Remote Work</string>
    <string name="staff_paid">Staff (paid)</string>
    <string name="tech">Tech</string>
    <string name="translations">Translations</string>
    <string name="volunteer">Volunteer</string>
    <string name="others">Others</string>
    <string name="close">Close</string>
    <string name="how_long_should_this_post_be_active_for">How long should this post be active for?</string>
    <string name="confirm">Confirm</string>
    <string name="a_day">A day</string>
    <string name="a_week">A week</string>
    <string name="a_month">A month</string>
    <string name="forever">Forever</string>
    <string name="my_organisation">My organisation</string>
    <string name="add_an_organisation_account">Add an organisation account</string>
    <string name="who_can_see_this_post">Who can see this post?</string>
    <string name="my_state">My state</string>
    <string name="my_city">My city</string>
    <string name="my_country">My country</string>
    <string name="worldwide">Worldwide</string>
    <string name="create_a_post">Create a post</string>
    <string name="offer">Offer</string>
    <string name="request">Request</string>
    <string name="it_exceeds_60_characters">It exceeds 60 characters.</string>
    <string name="title_hint">Title</string>
    <string name="description_of_your_post">Description of your post</string>
    <string name="who_can_see_this_post_and_for_how_long">Who can see this post and for how long?</string>
    <string name="add_tags_to_help_boost_your_visibility">Add tags to help boost your visibility</string>
    <string name="add_tags">Add Tags</string>
    <string name="post">Post</string>
    <string name="choose_tags">Choose Tags</string>
    <string name="posting_as">Posting As</string>
    <string name="for_1_day">For 1 Day</string>
    <string name="for_1_week">For 1 Week</string>
    <string name="for_1_month">For 1 Month</string>
    <string name="people_in_my_city">People in my City</string>
    <string name="people_in_my_country">People in my Country</string>
    <string name="people_in_my_state">People in my State</string>
    <string name="all_finished">All Finished!</string>
    <string name="finished_msg">Keep an eye on your post for comments or direct messages from people!</string>
    <string name="view_post">View Post</string>
    <string name="all_finished_image">All finished image</string>
    <string name="close_button">close_button</string>
</resources>