<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/fightPandemicsNero"
        android:lineSpacingExtra="6sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:text="@string/who_can_see_this_post"
        />


    <Button
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_offering_background"
        android:enabled="true"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/fightPandemicsNero"
        android:lineSpacingExtra="4sp"
        android:text="@string/my_neighborhood"
        android:fontFamily="@font/worksans_regular"
        />

    <Button
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_offering_background"
        android:enabled="true"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/fightPandemicsNero"
        android:lineSpacingExtra="4sp"
        android:text="@string/my_city"
        android:fontFamily="@font/worksans_regular"
        />

    <Button
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_offering_background"
        android:enabled="true"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/fightPandemicsNero"
        android:lineSpacingExtra="4sp"
        android:text="@string/my_country"
        android:fontFamily="@font/worksans_regular"
        />

    <Button
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_offering_background"
        android:enabled="true"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/fightPandemicsNero"
        android:lineSpacingExtra="4sp"
        android:text="@string/anyone"
        android:fontFamily="@font/worksans_regular"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="54dp"
            android:background="@drawable/button_close_background"
            android:enabled="true"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:lineSpacingExtra="4sp"
            android:textAllCaps="false"
            android:text="@string/close"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="10dp"
            />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="54dp"
            android:background="@drawable/button_confirm_blue_background"
            android:enabled="false"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:lineSpacingExtra="4sp"
            android:alpha="0.3"
            android:textAllCaps="false"
            android:text="@string/confirm"
            android:fontFamily="@font/poppins_medium"
            />

    </LinearLayout>

</LinearLayout>